--- a/style.css
+++ b/style.css
@@ -461,6 +461,9 @@ li {
    }
 
   .imgView {
+    width: 50%;
+    height: 50%;
+    left: 25%;
     position:absolute;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: right;
@@ -476,6 +479,18 @@ li {
     background-color: #fff;
     opacity: 0.5;
     text-transform: lowercase;
+  }
+  .imgOverlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    filter:alpha(opacity=50);
+    -moz-opacity:0.5;
+    -khtml-opacity: 0.5;
+    opacity: 0.5;
   }
   
   #tmb1 {
