--- a/style.css
+++ b/style.css
@@ -466,7 +466,7 @@ li {
     position:absolute;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     text-align: right;
-    padding: 7px 7px;
+    padding: 0;
     border: 1px solid black;
     animation: imgViewOpacity 0.5s ease forwards;
     box-shadow: 0 0 0.5vw #000;
@@ -592,8 +592,9 @@ li {
     transition: transform 0.3s ease;
   }
   .blogSlider__item {
-    flex: 0 0 calc(100vw/3 - 4vw);
+    flex: 0 0 calc(33% - 1vw);
     background: #fff;
+    box-sizing: border-box;
     text-transform: uppercase;
     font-family: Arial, Helvetica, sans-serif;
     border: 1px solid #fff;
@@ -935,7 +936,7 @@ li {
     line-height: 10vw;
   }
   .blogSlider__item {
-    flex: 0 0 calc(100% - 4% - 2px);
+    flex: 0 0 calc(100% - 2%);
     margin: 0 1%;
     padding: 1%;
   }
